# jobsearch

./: .env-template  .gitignore  README.md  config.toml  pyproject.toml
.github/workflows/: tests.yaml
src/jobsearch/: browser.py  cli.py  config.py  network.py  splash.py
src/jobsearch/sites/: builtin.py  google.py  greenhouse.py  linkedin.py  others.py
tests/: test_cli.py  test_config.py  test_network.py  test_sites.py
